================================================================================
Change history for glaciers
================================================================================

HIGHEST PRIORITY:
- visual representation of snowfall (gradient paint, clipped to sky)

HIGH PRIORITY:
- make sure everything works properly when clock is paused
- hide any features that aren't implemented for July 25 deadline
- change color of ice flow vectors so that they are different than debris color?
- start sim in steady state, with debris & ripples across entire glacier length, and moraine at terminus

MEDIUM PRIORITY:
- ask Archie to reduce the height of mountains.svg, the image size exceeds JVM heap space
- main control panel should be the same height in all modules
- eliminate code duplication in modules
- tweak alignment of mountains image, perspective (or image?) is a little off at headwall
- switch user-interface between English and metric units
- add yaw to fake 3D perspective (terminus, ELA, etc) 
? add headwallX to new ice thickness model in model.txt, which assumes headwallX=0
- provide time estimate for climate experiments interface
- Experiments module
- more "cartoonish" view for Basic panel?
- move steady state button to play area?
- "steady state" button needs to advance clock to the time at which the glacier would reach its steady state
- "steady state" button needs to fill in missing data in time-dependent graphs
- "steady state" button needs to fill glacier with debris and surface ripples
- always collect data for time-based graphs, keep "latest" & "historical" data points, compress historical, limit historical size
- add zoom in/out button for time-based graphs; show scrolling "latest" data or complete "historical"
- implement Save/Load feature
- PlayArea class is too big, refactor
- AbstractModel class is too big, refactor
- improve performance on slower machines

LOW PRIORITY:
- delete trash can code if we're sure we'll never need it